tests/data/placebo/test_dax_update_security_groups/dax.ListTags_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "7bdf0b6b-5782-11e8-8d38-2b6f8936bddb", 
            "HTTPHeaders": {
                "x-amzn-requestid": "7bdf0b6b-5782-11e8-8d38-2b6f8936bddb", 
                "date": "Mon, 14 May 2018 14:24:16 GMT", 
                "content-length": "11", 
                "content-type": "application/x-amz-json-1.1"
            }
        }, 
        "Tags": []
    }
}
