tests/data/placebo/test_dax_update_security_groups/ec2.DescribeSecurityGroups_1.json
{
    "status_code": 200, 
    "data": {
        "SecurityGroups": [
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "default VPC security group", 
                "IpPermissions": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [], 
                        "UserIdGroupPairs": [
                            {
                                "UserId": "644160558196", 
                                "GroupId": "sg-4b9ada34"
                            }
                        ], 
                        "Ipv6Ranges": []
                    }
                ], 
                "GroupName": "default", 
                "VpcId": "vpc-f1516b97", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-4b9ada34"
            }
        ], 
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "fe67d1b5-3d8e-46d3-8ec4-1df22e390d84", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Mon, 14 May 2018 14:24:16 GMT"
            }
        }
    }
}
